--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-image: url(images/BG1.jpg);
+  background-color: lightblue;
+
 }
 
 .container {
