Revert the changes
Revert the changes

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: lightblue;
+  background-image: url(images/BG1.jpg);
 
 }
 
